# testing-feat

./: .gitignore  LICENSE  Setup.lhs  testing-feat.cabal
Test/: Feat.hs
Test/Feat/: Access.hs  Class.hs  Driver.hs  Enumerate.hs  Finite.hs  Modifiers.hs
Test/Feat/Class/: Override.hs
Test/Feat/Internals/: Derive.hs  Newtypes.hs  Tag.hs
examples/haskell-src-exts/: hse.hs
examples/lambda-terms/: lambdas.hs
examples/template-haskell/: th.hs
